--- a/skilllist/templates/skilllist/skill_list.html
+++ b/skilllist/templates/skilllist/skill_list.html
@@ -1,8 +1,19 @@
+{% load staticfiles %}
 <html>
+    <head>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/skills.css' %}">
+    </head>
     <body>
         {% for skill in skills %}
-            <div>
-                <h1>{{ skill.name }}</h1>
+            <div class='skill col-md-4'>
+                <h2>{{ skill.name }}</h2>
+                <div>Activation: {{ skill.activation }}</div>
+                <div>Recharge: {{ skill.recharge }}</div>
+                <div>Duration: {{ skill.duration }}</div>
+                <div>Range: {{ skill.castrange }}</div>
+                <div>Cost: {{ skill.cost }}</div>
                 <p>{{ skill.description|linebreaksbr }}</p>
             </div>
         {% endfor %}
