--- a/ff/templates/ff/generateImage.html
+++ b/ff/templates/ff/generateImage.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         {{ data }}
-        <form action="/ff/generateImage.html">
+        <form action="/ff/generateImage.html" method="post">
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
             Team 1 Skore:<br>
@@ -24,7 +24,7 @@
             <input type="text" name="hit2"><br>
             Team 2 Errory:<br>
             <input type="text" name="error2"><br>
-            <input type="submit" value="Submit" method="post">
+            <input type="submit" value="Submit" >
         </form>
         <canvas id="canvas" width="976" height="720"></canvas>
 
