--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         {{ data }}
-        <form action="/ff" method="post">
+        <form action="/ff/" method="post">
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
             Team 1 Skore:<br>
