--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
+        {{ hura }}
         {{ data }}
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
