--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
-        {{ hura }}
-        {{ data }}
+        <h1>{{ hura }}</h1>
+        <h1>{{ data }}</h1>
+        <p>{{skills}}</p>
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
