--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -9,7 +9,7 @@
         <h1>{{ hura }}</h1>
         <h1>{{ data }}</h1>
         <p>{{skills}}</p>
-        <form action="" method="post">{% csrf_token %}
+        <form action="">{% csrf_token %}
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
             Team 1 Skore:<br>
