--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,10 +6,8 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
-        <h1>{{ hura }}</h1>
-        <h1>{{ data }}</h1>
-        <p>{{ request.GET }}</p>
-        <form action="">{% csrf_token %}
+        <p>{{ request.POST }}</p>
+        <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
             Team 1 Skore:<br>
