--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
+        <p>{{ data }}</p>
         <p>{{ request.POST }}</p>
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
@@ -28,7 +29,6 @@
         </form>
         <canvas id="canvas" width="976" height="720"></canvas>
 
-        {% if request.method == "POST" %}
         <script>
             function draw() {
             var ctx = document.getElementById('canvas').getContext('2d');
@@ -38,18 +38,17 @@
                 ctx.drawImage(imageObj, 0, 0);
                 ctx.font = '48px serif';
                 ctx.fillStyle = 'white'
-                ctx.fillText({{ request.POST['team1'] }}, 10, 860);
-                ctx.fillText({{ request.POST['score1'] }}, 150, 860);
-                ctx.fillText({{ request.POST['hit1'] }}, 200, 860);
-                ctx.fillText({{ request.POST['error1'] }}, 250, 860);
-                ctx.fillText({{ request.POST['team2'] }}, 10, 910);
-                ctx.fillText({{ request.POST['score2'] }}, 150, 910);
-                ctx.fillText({{ request.POST['hit2'] }}, 200, 910);
-                ctx.fillText({{ request.POST['error2'] }}, 250, 910);
+                ctx.fillText(, 10, 860);
+                ctx.fillText(, 150, 860);
+                ctx.fillText(, 200, 860);
+                ctx.fillText(, 250, 860);
+                ctx.fillText(, 10, 910);
+                ctx.fillText(, 150, 910);
+                ctx.fillText(, 200, 910);
+                ctx.fillText(, 250, 910);
             };
             imageObj.src = 'http://www.fightingflies.sk/wp-content/uploads/photo-gallery/IMG_1437.JPG';
             }draw();
         </script>
-        {% endif %}
     </body>
 </html>
