--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -7,9 +7,7 @@
     </head>
     <body>
         <p>{{ data }}</p>
-        {% if 'team1' in request.POST %}
-        <p>{{ request.POST['team1'] }}</p>
-        {% endif %}
+        <p>{{ request.POST.get('team1') }}</p>
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
