--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
-        <p>{{ data }}</p>
+        {% for skill in data %}
+            <p>{{ skill }}</p>
+        {% endfor %}
+
         {{ request.POST }}
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
