--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -9,6 +9,9 @@
         
         {% for skill in skills %}
             <p style="display: none">{{ skill }}</p>
+            {% if skill in skills%}
+            <h1>aaaa</h1>
+            {% endif %}
         {% endfor %}
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
