--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,10 +6,9 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
-        
+        {{ skills }}
         {% for skill in skills %}
             <p style="display: none">{{ skill }}</p>
-            {{ skills[skill] }}
         {% endfor %}
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
