--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,10 +6,7 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
-        {{ skills }}
-        {% for skill in skills %}
-            <p style="display: none">{{ skill }}</p>
-        {% endfor %}
+        {{ team1 }}
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
