--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -7,6 +7,14 @@
     </head>
     <body>
         {{ team1 }}
+        {{ score1 }}
+        {{ hit1 }}
+        {{ error1 }}
+        {{ team2 }}
+        {{ score2 }}
+        {{ hit2 }}
+        {{ error2 }}
+
         <form action="" method="post">{% csrf_token %}
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
