--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -38,6 +38,14 @@
 
         <script>
             function draw() {
+            console.log('a', document.getElementById("team1").innerHTML)
+            console.log('a', document.getElementById("score1").innerHTML)
+            console.log('a', document.getElementById("hit1").innerHTML)
+            console.log('a', document.getElementById("error1").innerHTML)
+            console.log('a', document.getElementById("team2").innerHTML)
+            console.log('a', document.getElementById("score2").innerHTML)
+            console.log('a', document.getElementById("hit2").innerHTML)
+            console.log('a', document.getElementById("error2").innerHTML)
             var ctx = document.getElementById('canvas').getContext('2d');
             var imageObj = new Image();
 
