--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -55,7 +55,7 @@
                 ctx.fillText(document.getElementById("hit2").innerHTML, 600, 680);
                 ctx.fillText(document.getElementById("error2").innerHTML, 700, 680);
             };
-            imageObj.src = './IMG_1437.JPG';
+            imageObj.src = '/static/IMG_1437.JPG';
             }draw();
 
             function downloadCanvas(link, canvasId, filename) {
