--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -35,7 +35,7 @@
             <input type="submit" value="Submit" >
         </form>
         <canvas id="canvas" width="976" height="720"></canvas>
-        <a id="download">Download as image</a>
+        <a id="download" style="font-size: 30px">Download as image</a>
 
         <script>
             function draw() {
