--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -16,6 +16,8 @@
         <p id='error2' style="display: none">{{ error2 }}</p>
 
         <form action="" method="post">{% csrf_token %}
+            Nazov Akcie:<br>
+            <input type="text" name="akcia"><br>
             Team 1 Meno:<br>
             <input type="text" name="team1"><br>
             Team 1 Skore:<br>
@@ -46,16 +48,17 @@
                 ctx.drawImage(imageObj, 0, 0);
                 ctx.font = '48px serif';
                 ctx.fillStyle = 'white'
-                ctx.fillText(document.getElementById("team1").innerHTML, 40, 600);
-                ctx.fillText(document.getElementById("score1").innerHTML, 500, 600);
-                ctx.fillText(document.getElementById("hit1").innerHTML, 600, 600);
-                ctx.fillText(document.getElementById("error1").innerHTML, 700, 600);
-                ctx.fillText(document.getElementById("team2").innerHTML, 40, 680);
-                ctx.fillText(document.getElementById("score2").innerHTML, 500, 680);
-                ctx.fillText(document.getElementById("hit2").innerHTML, 600, 680);
-                ctx.fillText(document.getElementById("error2").innerHTML, 700, 680);
+                ctx.fillText(document.getElementById("akcia").innerHTML, 400, 40);
+                ctx.fillText(document.getElementById("team1").innerHTML, 40, 120);
+                ctx.fillText(document.getElementById("score1").innerHTML, 500, 120);
+                ctx.fillText(document.getElementById("hit1").innerHTML, 600, 120);
+                ctx.fillText(document.getElementById("error1").innerHTML, 700, 120);
+                ctx.fillText(document.getElementById("team2").innerHTML, 40, 220);
+                ctx.fillText(document.getElementById("score2").innerHTML, 500, 220);
+                ctx.fillText(document.getElementById("hit2").innerHTML, 600, 220);
+                ctx.fillText(document.getElementById("error2").innerHTML, 700, 220);
             };
-            imageObj.src = '/static/IMG_1437.JPG';
+            imageObj.src = '/static/image.png';
             }draw();
 
             function downloadCanvas(link, canvasId, filename) {
@@ -63,7 +66,7 @@
                 link.download = filename;
             }
 
-            /** 
+            /**
             * The event handler for the link's onclick event. We give THIS as a
             * parameter (=the link element), ID of the canvas and a filename.
             */
