--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="{% static 'css/skills.css' %}">
     </head>
     <body>
+        <p id='akcia' style="display: none">{{ akcia }}</p>
         <p id='team1' style="display: none">{{ team1 }}</p>
         <p id='score1' style="display: none">{{ score1 }}</p>
         <p id='hit1' style="display: none">{{ hit1 }}</p>
