--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -50,24 +50,30 @@
                 ctx.font = '48px serif';
                 ctx.fillStyle = 'white'
                 ctx.strokeStyle = 'black'
-                ctx.fillText(document.getElementById("akcia").innerHTML, 340, 50);
-                ctx.strokeText(document.getElementById("akcia").innerHTML, 340, 50);
-                ctx.fillText(document.getElementById("team1").innerHTML, 40, 120);
-                ctx.strokeText(document.getElementById("team1").innerHTML, 40, 120);
-                ctx.fillText(document.getElementById("score1").innerHTML, 400, 120);
-                ctx.strokeText(document.getElementById("score1").innerHTML, 400, 120);
-                ctx.fillText(document.getElementById("hit1").innerHTML, 500, 120);
-                ctx.strokeText(document.getElementById("hit1").innerHTML, 500, 120);
-                ctx.fillText(document.getElementById("error1").innerHTML, 600, 120);
-                ctx.strokeText(document.getElementById("error1").innerHTML, 600, 120);
+                ctx.fillText(document.getElementById("akcia").innerHTML, 40, 50);
+                ctx.strokeText(document.getElementById("akcia").innerHTML, 40, 50);
+                ctx.fillText('R', 600, 50);
+                ctx.strokeText('R', 600, 50);
+                ctx.fillText('H', 700, 50);
+                ctx.strokeText('H', 700, 50);
+                ctx.fillText('E', 800, 50);
+                ctx.strokeText('E', 800, 50);
+                ctx.fillText(document.getElementById("team1").innerHTML, 40, 160);
+                ctx.strokeText(document.getElementById("team1").innerHTML, 40, 160);
+                ctx.fillText(document.getElementById("score1").innerHTML, 600, 160);
+                ctx.strokeText(document.getElementById("score1").innerHTML, 600, 160);
+                ctx.fillText(document.getElementById("hit1").innerHTML, 700, 160);
+                ctx.strokeText(document.getElementById("hit1").innerHTML, 700, 160);
+                ctx.fillText(document.getElementById("error1").innerHTML, 800, 160);
+                ctx.strokeText(document.getElementById("error1").innerHTML, 800, 160);
                 ctx.fillText(document.getElementById("team2").innerHTML, 40, 220);
                 ctx.strokeText(document.getElementById("team2").innerHTML, 40, 220);
-                ctx.fillText(document.getElementById("score2").innerHTML, 400, 220);
-                ctx.strokeText(document.getElementById("score2").innerHTML, 400, 220);
-                ctx.fillText(document.getElementById("hit2").innerHTML, 500, 220);
-                ctx.strokeText(document.getElementById("hit2").innerHTML, 500, 220);
-                ctx.fillText(document.getElementById("error2").innerHTML, 600, 220);
-                ctx.strokeText(document.getElementById("error2").innerHTML, 600, 220);
+                ctx.fillText(document.getElementById("score2").innerHTML, 600, 220);
+                ctx.strokeText(document.getElementById("score2").innerHTML, 600, 220);
+                ctx.fillText(document.getElementById("hit2").innerHTML, 700, 220);
+                ctx.strokeText(document.getElementById("hit2").innerHTML, 700, 220);
+                ctx.fillText(document.getElementById("error2").innerHTML, 800, 220);
+                ctx.strokeText(document.getElementById("error2").innerHTML, 800, 220);
             };
             imageObj.src = '/static/image.png';
             }draw();
