--- a/skilllist/templates/ff/generateImage.html
+++ b/skilllist/templates/ff/generateImage.html
@@ -49,7 +49,8 @@
                 ctx.drawImage(imageObj, 0, 0);
                 ctx.font = '48px serif';
                 ctx.fillStyle = 'white'
-                ctx.strokeStyle = 'black'
+                ctx.strokeStyle = 'green'
+                ctx.lineWidth = 6
                 ctx.fillText(document.getElementById("akcia").innerHTML, 40, 50);
                 ctx.strokeText(document.getElementById("akcia").innerHTML, 40, 50);
                 ctx.fillText('R', 600, 50);
